// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SingleChoiceQuestion Snapshots should match snapshot in edit mode 1`] = `
<div
  class="rounded-lg border border-neutral-200 p-4 "
>
  <div
    class="flex items-start gap-3"
  >
    <div
      class="flex-1"
    >
      <div
        class=""
      >
        <label
          class="mb-1.5 block text-sm font-medium text-neutral-700"
          for="_r_23_"
        >
          Question
          <span
            aria-label="required"
            class="text-destructive-600 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
          id="_r_23_"
          placeholder="Enter your question"
          required=""
          type="text"
          value="What is the capital of France?"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-4"
  >
    <div
      class="mb-2 flex items-center justify-between"
    >
      <div
        class="block text-sm font-medium text-neutral-700"
      >
        Answer Options
        <span
          aria-label="required"
          class="text-destructive-600 ml-1"
        >
          *
        </span>
      </div>
      <button
        aria-disabled="false"
        aria-label="Add option"
        class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
        style="cursor: pointer;"
        type="button"
      >
        + Add Option
      </button>
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-start gap-2"
      >
        <div
          class="flex items-center pt-8"
        >
          <input
            aria-label="Mark "Paris" as correct answer"
            checked=""
            class="focus:ring-primary-500 text-primary-600 h-5 w-5 cursor-pointer rounded-full border-2 border-neutral-300 bg-white transition-colors focus:ring-2 focus:ring-offset-2 focus:outline-none"
            id="correct-1"
            name="correct-1"
            type="radio"
          />
        </div>
        <div
          class="flex-1"
        >
          <div
            class=""
          >
            <label
              class="mb-1.5 block text-sm font-medium text-neutral-700"
              for="_r_24_"
            >
              Option 1
              <span
                aria-label="required"
                class="text-destructive-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_24_-help"
              aria-invalid="false"
              class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
              id="_r_24_"
              placeholder="Enter option text"
              required=""
              type="text"
              value="Paris"
            />
            <p
              class="mt-1.5 text-sm text-neutral-600"
              id="_r_24_-help"
            >
              Correct answer
            </p>
          </div>
        </div>
        <div
          class="pt-8"
        >
          <button
            aria-disabled="false"
            aria-label="Remove option 1"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
            style="cursor: pointer;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-start gap-2"
      >
        <div
          class="flex items-center pt-8"
        >
          <input
            aria-label="Mark "London" as correct answer"
            class="focus:ring-primary-500 text-primary-600 h-5 w-5 cursor-pointer rounded-full border-2 border-neutral-300 bg-white transition-colors focus:ring-2 focus:ring-offset-2 focus:outline-none"
            id="correct-2"
            name="correct-1"
            type="radio"
          />
        </div>
        <div
          class="flex-1"
        >
          <div
            class=""
          >
            <label
              class="mb-1.5 block text-sm font-medium text-neutral-700"
              for="_r_25_"
            >
              Option 2
              <span
                aria-label="required"
                class="text-destructive-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_25_-help"
              aria-invalid="false"
              class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
              id="_r_25_"
              placeholder="Enter option text"
              required=""
              type="text"
              value="London"
            />
            <p
              class="mt-1.5 text-sm text-neutral-600"
              id="_r_25_-help"
            >
              Select radio to mark as correct
            </p>
          </div>
        </div>
        <div
          class="pt-8"
        >
          <button
            aria-disabled="false"
            aria-label="Remove option 2"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
            style="cursor: pointer;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-start gap-2"
      >
        <div
          class="flex items-center pt-8"
        >
          <input
            aria-label="Mark "Berlin" as correct answer"
            class="focus:ring-primary-500 text-primary-600 h-5 w-5 cursor-pointer rounded-full border-2 border-neutral-300 bg-white transition-colors focus:ring-2 focus:ring-offset-2 focus:outline-none"
            id="correct-3"
            name="correct-1"
            type="radio"
          />
        </div>
        <div
          class="flex-1"
        >
          <div
            class=""
          >
            <label
              class="mb-1.5 block text-sm font-medium text-neutral-700"
              for="_r_26_"
            >
              Option 3
              <span
                aria-label="required"
                class="text-destructive-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_26_-help"
              aria-invalid="false"
              class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
              id="_r_26_"
              placeholder="Enter option text"
              required=""
              type="text"
              value="Berlin"
            />
            <p
              class="mt-1.5 text-sm text-neutral-600"
              id="_r_26_-help"
            >
              Select radio to mark as correct
            </p>
          </div>
        </div>
        <div
          class="pt-8"
        >
          <button
            aria-disabled="false"
            aria-label="Remove option 3"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
            style="cursor: pointer;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-primary-600 mt-4 text-sm"
    role="status"
  >
    ✓ Question is valid
  </div>
</div>
`;

exports[`SingleChoiceQuestion Snapshots should match snapshot in preview mode 1`] = `
<fieldset
  class="rounded-lg border border-neutral-200 p-4 "
>
  <legend
    class="px-2 text-lg font-semibold"
  >
    What is the capital of France?
  </legend>
  <div
    class="mt-4 space-y-3"
  >
    <div
      class=""
    >
      <div
        class="flex items-start"
      >
        <input
          class="w-5 h-5 border-2 rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
          id="_r_27_"
          name="question-1"
          type="radio"
          value="1"
        />
        <label
          class="ml-2 block text-base text-neutral-700 cursor-pointer"
          for="_r_27_"
        >
          Paris
        </label>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="flex items-start"
      >
        <input
          class="w-5 h-5 border-2 rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
          id="_r_28_"
          name="question-1"
          type="radio"
          value="2"
        />
        <label
          class="ml-2 block text-base text-neutral-700 cursor-pointer"
          for="_r_28_"
        >
          London
        </label>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="flex items-start"
      >
        <input
          class="w-5 h-5 border-2 rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 border-neutral-300 focus:ring-primary-500 text-primary-600 bg-white cursor-pointer "
          id="_r_29_"
          name="question-1"
          type="radio"
          value="3"
        />
        <label
          class="ml-2 block text-base text-neutral-700 cursor-pointer"
          for="_r_29_"
        >
          Berlin
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`SingleChoiceQuestion Snapshots should match snapshot with custom className 1`] = `
<div
  class="rounded-lg border border-neutral-200 p-4 custom-class"
>
  <div
    class="flex items-start gap-3"
  >
    <div
      class="flex-1"
    >
      <div
        class=""
      >
        <label
          class="mb-1.5 block text-sm font-medium text-neutral-700"
          for="_r_2a_"
        >
          Question
          <span
            aria-label="required"
            class="text-destructive-600 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
          id="_r_2a_"
          placeholder="Enter your question"
          required=""
          type="text"
          value="What is the capital of France?"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-4"
  >
    <div
      class="mb-2 flex items-center justify-between"
    >
      <div
        class="block text-sm font-medium text-neutral-700"
      >
        Answer Options
        <span
          aria-label="required"
          class="text-destructive-600 ml-1"
        >
          *
        </span>
      </div>
      <button
        aria-disabled="false"
        aria-label="Add option"
        class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
        style="cursor: pointer;"
        type="button"
      >
        + Add Option
      </button>
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-start gap-2"
      >
        <div
          class="flex items-center pt-8"
        >
          <input
            aria-label="Mark "Paris" as correct answer"
            checked=""
            class="focus:ring-primary-500 text-primary-600 h-5 w-5 cursor-pointer rounded-full border-2 border-neutral-300 bg-white transition-colors focus:ring-2 focus:ring-offset-2 focus:outline-none"
            id="correct-1"
            name="correct-1"
            type="radio"
          />
        </div>
        <div
          class="flex-1"
        >
          <div
            class=""
          >
            <label
              class="mb-1.5 block text-sm font-medium text-neutral-700"
              for="_r_2b_"
            >
              Option 1
              <span
                aria-label="required"
                class="text-destructive-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_2b_-help"
              aria-invalid="false"
              class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
              id="_r_2b_"
              placeholder="Enter option text"
              required=""
              type="text"
              value="Paris"
            />
            <p
              class="mt-1.5 text-sm text-neutral-600"
              id="_r_2b_-help"
            >
              Correct answer
            </p>
          </div>
        </div>
        <div
          class="pt-8"
        >
          <button
            aria-disabled="false"
            aria-label="Remove option 1"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
            style="cursor: pointer;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-start gap-2"
      >
        <div
          class="flex items-center pt-8"
        >
          <input
            aria-label="Mark "London" as correct answer"
            class="focus:ring-primary-500 text-primary-600 h-5 w-5 cursor-pointer rounded-full border-2 border-neutral-300 bg-white transition-colors focus:ring-2 focus:ring-offset-2 focus:outline-none"
            id="correct-2"
            name="correct-1"
            type="radio"
          />
        </div>
        <div
          class="flex-1"
        >
          <div
            class=""
          >
            <label
              class="mb-1.5 block text-sm font-medium text-neutral-700"
              for="_r_2c_"
            >
              Option 2
              <span
                aria-label="required"
                class="text-destructive-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_2c_-help"
              aria-invalid="false"
              class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
              id="_r_2c_"
              placeholder="Enter option text"
              required=""
              type="text"
              value="London"
            />
            <p
              class="mt-1.5 text-sm text-neutral-600"
              id="_r_2c_-help"
            >
              Select radio to mark as correct
            </p>
          </div>
        </div>
        <div
          class="pt-8"
        >
          <button
            aria-disabled="false"
            aria-label="Remove option 2"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
            style="cursor: pointer;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-start gap-2"
      >
        <div
          class="flex items-center pt-8"
        >
          <input
            aria-label="Mark "Berlin" as correct answer"
            class="focus:ring-primary-500 text-primary-600 h-5 w-5 cursor-pointer rounded-full border-2 border-neutral-300 bg-white transition-colors focus:ring-2 focus:ring-offset-2 focus:outline-none"
            id="correct-3"
            name="correct-1"
            type="radio"
          />
        </div>
        <div
          class="flex-1"
        >
          <div
            class=""
          >
            <label
              class="mb-1.5 block text-sm font-medium text-neutral-700"
              for="_r_2d_"
            >
              Option 3
              <span
                aria-label="required"
                class="text-destructive-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_2d_-help"
              aria-invalid="false"
              class="w-full border rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 px-4 py-2 text-base border-neutral-300 focus:ring-primary-500 focus:border-primary-500 bg-white text-neutral-900 "
              id="_r_2d_"
              placeholder="Enter option text"
              required=""
              type="text"
              value="Berlin"
            />
            <p
              class="mt-1.5 text-sm text-neutral-600"
              id="_r_2d_-help"
            >
              Select radio to mark as correct
            </p>
          </div>
        </div>
        <div
          class="pt-8"
        >
          <button
            aria-disabled="false"
            aria-label="Remove option 3"
            class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
            style="cursor: pointer;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-primary-600 mt-4 text-sm"
    role="status"
  >
    ✓ Question is valid
  </div>
</div>
`;
